we don't support addModules. use --add-modules instead.